# kip

./: .gitignore  LICENSE  PLAN-batch-ffi.md  README.md  Setup.hs  install.sh  kip.cabal  kılavuz.md  stack.yaml
.github/workflows/: ci.yml
.vim/ftdetect/: kip.vim
.vim/syntax/: kip.vim
app/: Lsp.hs  Main.hs  Playground.hs
c/: morphology.c  morphology.h
examples/: topla.kip
lib/: temel-dizge.kip  temel-etki.kip  temel-tam-sayı.kip
playground/: .gitignore  build-foma-wasm.sh  build-wasm.sh  index.html  playground.js  style.css
src/Kip/: AST.hs  Cache.hs  Eval.hs  Parser.hs  Render.hs  Runner.hs  TypeCheck.hs
src/Kip/Codegen/: JS.hs
src/Language/: Foma.hs
tests/: LspTest.hs  Main.hs  README.md
tests/fail/: ayrıştırma-hatası.kip  aşırı-yükleme-hatası.err  aşırı-yükleme-hatası.kip  bindirme-hatası.kip  dosya-io.kip  eksiksiz-örüntü-dördüncü.kip  eksiksiz-örüntü-üçüncü.kip  eksiksiz-örüntü-üçüncü.out  eksiksiz-örüntü.kip  etki-yazmak.err  etki-yazmak.kip  tam-sayı-örüntüsü.err  tam-sayı-örüntüsü.kip  tanımsız-fonksiyon.err  tanımsız-fonksiyon.kip  tanımsız-isim.kip  tek-ya-da.err  tek-ya-da.kip  tip-hatası.kip  yapkı-uyumsuzluğu.err  yapkı-uyumsuzluğu.kip  çok-ya-da.kip  örnek-tekrar.err  örnek-tekrar.kip  örnek-yapkı-hatası.kip  örüntü-tip-hatası.err  örüntü-tip-hatası.kip
tests/lsp/: README.md  basic.json  basic.kip  cache-reuse.json  cache-reuse.kip  completion-constructors.json  completion-constructors.kip  completion-types.json  completion-types.kip  definition-overload.json  definition-overload.kip  definition.json  definition.kip  diagnostics.json  diagnostics.kip  formatting-edits.json  formatting-noop.json  hover.json  parse-error.json  parse-error.kip  positions.json  positions.kip
tests/repl/: argüman-tipleri.out  değilse-örüntü.out  değilse-örüntü.repl  doğal-sayı-aritmetiği.out  doğal-sayı-aritmetiği.repl  ek-öbek.out  iki-tür-bindirme.out  iki-tür-bindirme.repl  iç-örnek-eşleşme.out  iç-örnek-eşleşme.repl  iç-örnek-şu.out  iç-örnek-şu.repl  kesişim-çıktı.kip  kesişim-çıktı.out  tip-imzaları.out  tip-imzaları.repl
tests/succeed/: argüman-tipleri.kip  argüman-tipleri.out  asal-sayılar.kip  asal-sayılar.out  aynı-hal-ardışık-fark.kip  aynı-hal-ardışık-fark.out  bir-fazlası.kip  bir-fazlası.out  deneme-yazma.kip  deneme-yazma.out  değilse-örüntü.kip  değilse-örüntü.out  dizge-escape.kip  dizge-escape.out  dizge-hal.out  dizge-işlemleri.kip  dizge-işlemleri.out  dosya-io.kip  dosya-io.out  doğruluk-tersi.out  ek-öbek.kip  eksiksiz-örüntü.kip  eksiksiz-örüntü.out  etki-yazmak.out  fibonacci.kip  fibonacci.out  geri-dönüş-tipi.kip  geri-dönüş-tipi.out  gün-örneği.out  iki-tür-bindirme.kip  iki-tür-bindirme.out  ikili-ağaç-araması.kip  ikili-ağaç-araması.out  iç-örnek-eşleşme.kip  iç-örnek-eşleşme.out  iç-örnek-şu.kip  iç-örnek-şu.out  içiçe-eşleşme.kip  içiçe-eşleşme.out  içiçe-eşleşme2.kip  (+25 more)
vscode-plugin/syntaxes/: kip.tmLanguage.json
