cabal-version: 1.12
name:           kip
version:        0.1.0.0
description:    A programming language based on grammatical cases of Turkish.
homepage:       https://github.com/joom/kip#readme
bug-reports:    https://github.com/joom/kip/issues
author:         Joomy Korkut
maintainer:     joomy@type.systems
copyright:      2021 Joomy Korkut
license:        MIT
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    vendor/trmorph.fst

data-files:
    vendor/trmorph.fst
    lib/temel.kip
    lib/giriş.kip
    lib/temel-doğruluk.kip
    lib/temel-dizge.kip
    lib/temel-etki.kip
    lib/temel-liste.kip
    lib/temel-tam-sayı.kip
    lib/temel-ondalık-sayı.kip

source-repository head
  type: git
  location: https://github.com/joom/kip

library
  exposed-modules:
      Kip.AST
      Kip.Cache
      Kip.Eval
      Kip.Parser
      Kip.Render
      Kip.Runner
      Kip.Codegen.JS
      Kip.TypeCheck
      Language.Foma
  other-modules:
      Paths_kip
  hs-source-dirs:
      src
  c-sources:
      c/morphology.c
  include-dirs:
      c
  install-includes:
      morphology.h
  extra-libraries:
      foma
    , z
  if os(darwin)
    ghc-options: -optP-Wno-nonportable-include-path -optc-Wno-nonportable-include-path -optl-Wl,-w
  build-depends:
      base >=4.7 && <5
    , bytestring
    , containers
    , hashable
    , hashtables
    , megaparsec
    , split
    , text
    , transformers
    , binary
    , cryptohash-sha256
    , mtl
    , time
    , filepath
    , directory
    , random
  default-language: Haskell2010

executable kip
  main-is: Main.hs
  other-modules:
      Paths_kip
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  if os(wasi)
    buildable: False
  if os(darwin)
    ghc-options: -optP-Wno-nonportable-include-path -optc-Wno-nonportable-include-path -optl-Wl,-w
  build-depends:
      base >=4.7 && <5
    , bytestring
    , containers
    , directory
    , haskeline
    , hashtables
    , optparse-applicative
    , transformers
    , megaparsec
    , kip
    , chalk
    , text
    , filepath
    , binary
    , cryptohash-sha256
    , mtl
    , time
  default-language: Haskell2010

executable kip-playground
  main-is: Playground.hs
  other-modules:
      Paths_kip
  hs-source-dirs:
      app
  if os(wasi)
    ghc-options: -rtsopts
  else
    ghc-options: -threaded -rtsopts -with-rtsopts=-N
  if os(darwin)
    ghc-options: -optP-Wno-nonportable-include-path -optc-Wno-nonportable-include-path -optl-Wl,-w
  build-depends:
      base >=4.7 && <5
    , bytestring
    , containers
    , directory
    , hashtables
    , optparse-applicative
    , transformers
    , megaparsec
    , kip
    , text
    , filepath
    , binary
    , cryptohash-sha256
    , mtl
    , time
  default-language: Haskell2010

executable kip-lsp
  main-is: Lsp.hs
  other-modules:
      Paths_kip
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  if os(wasi)
    buildable: False
  if os(darwin)
    ghc-options: -optP-Wno-nonportable-include-path -optc-Wno-nonportable-include-path -optl-Wl,-w
  build-depends:
      base >=4.7 && <5
    , bytestring
    , containers
    , directory
    , filepath
    , hashtables
    , kip
    , lens
    , lsp
    , lsp-types
    , megaparsec
    , row-types
    , text
    , transformers
    , binary
    , cryptohash-sha256
    , mtl
  default-language: Haskell2010

test-suite kip-tests
  type: exitcode-stdio-1.0
  main-is: Main.hs
  other-modules:
      LspTest
  hs-source-dirs:
      tests
  if os(darwin)
    ghc-options: -optP-Wno-nonportable-include-path -optc-Wno-nonportable-include-path -optl-Wl,-w
  build-depends:
      base >=4.7 && <5
    , aeson
    , bytestring
    , directory
    , filepath
    , process
    , scientific
    , tasty
    , tasty-hunit
    , text
    , time
    , vector
  default-language: Haskell2010
